# swagger.json
@@ -11,6 +11,10 @@
     {
       "name": "Fee Type",
       "description": "Endpoints related to Fee Type"
+    },
+    {
+      "name": "Fee Schedule",
+      "description": "Endpoints related to Fee Schedule"
     }
   ],
   "securityDefinitions": {
@@ -460,6 +464,228 @@
             "bearerAuth": []
           }
         ]
+      }
+    },
+    "/feeschedule": {
+      "get": {
+        "tags": ["Fee Schedule"],
+        "summary": "This API fetches all feeschedules.",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "description": "The page number of the feeschedule",
+            "required": true,
+            "type": "integer"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "The limit of the feeschedule",
+            "required": true,
+            "type": "integer"
+          },
+          {
+            "name": "scheduleType",
+            "in": "query",
+            "description": "The schedule type of the feeschedule",
+            "required": false,
+            "type": "string",
+            "example": "Monthly/Yearly"
+          },
+          {
+            "name": "schoolId",
+            "in": "query",
+            "description": "The school of the feeschedule",
+            "required": false,
+            "type": "string",
+            "example": "efefefefefefefefefefefef"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean"
+                },
+                "data": {
+                  "type": "array",
+                  "example": [
+                    {
+                      "_id": "6410502d0661f387bf3a0cf1",
+                      "scheduleName": "Test2",
+                      "description": "Test",
+                      "scheduleType": "Monthly",
+                      "startDate": "2023-04-30T18:30:00.000Z",
+                      "endDate": "2024-02-29T18:30:00.000Z",
+                      "interval": 3,
+                      "schoolId": "efefefefefefefefefefefef",
+                      "scheduledDates": [
+                        "2023-04-30T18:30:00.000Z",
+                        "2023-07-31T18:30:00.000Z",
+                        "2023-10-31T18:30:00.000Z",
+                        "2024-01-31T18:30:00.000Z"
+                      ],
+                      "createdAt": "2023-03-14T10:45:01.488Z",
+                      "updatedAt": "2023-03-14T10:45:01.488Z",
+                      "__v": 0
+                    }
+                  ]
+                },
+                "resultCount": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Fetched Successfully"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Fee Schedules Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Fee Schedule"],
+        "summary": "This API creates a new feeschedule.",
+        "parameters": [
+          {
+            "name": "scheduleName",
+            "in": "formData",
+            "description": "The name of the feeschedule",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "description",
+            "in": "formData",
+            "description": "The description of the feeschedule",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "scheduleType",
+            "in": "formData",
+            "description": "The schedule type of the feeschedule",
+            "required": true,
+            "type": "string",
+            "example": "Monthly/Yearly"
+          },
+          {
+            "name": "startDate",
+            "in": "formData",
+            "description": "The start date of the feeschedule",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "endDate",
+            "in": "formData",
+            "description": "The end date of the feeschedule",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "interval",
+            "in": "formData",
+            "description": "The interval of the feeschedule",
+            "required": false,
+            "type": "integer"
+          },
+          {
+            "name": "schoolId",
+            "in": "formData",
+            "description": "The school of the feeschedule",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "422": {
+            "description": "Please Provide All Required Fields"
+          },
+          "400": {
+            "description": "Fee Schedule Already Exists"
+          },
+          "201": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean"
+                },
+                "data": {
+                  "type": "object",
+                  "example": {
+                    "_id": "6410502d0661f387bf3a0cf1",
+                    "scheduleName": "Test2",
+                    "description": "Test",
+                    "scheduleType": "Monthly",
+                    "startDate": "2023-04-30T18:30:00.000Z",
+                    "endDate": "2024-02-29T18:30:00.000Z",
+                    "interval": 3,
+                    "schoolId": "efefefefefefefefefefefef",
+                    "scheduledDates": [
+                      "2023-04-30T18:30:00.000Z",
+                      "2023-07-31T18:30:00.000Z",
+                      "2023-10-31T18:30:00.000Z",
+                      "2024-01-31T18:30:00.000Z"
+                    ],
+                    "createdAt": "2023-03-14T10:45:01.488Z",
+                    "updatedAt": "2023-03-14T10:45:01.488Z",
+                    "__v": 0
+                  },
+                  "properties": {
+                    "scheduleName": {
+                      "type": "string"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
+                    "scheduleType": {
+                      "type": "string"
+                    },
+                    "startDate": {
+                      "type": "string"
+                    },
+                    "endDate": {
+                      "type": "string"
+                    },
+                    "interval": {
+                      "type": "integer"
+                    },
+                    "schoolId": {
+                      "type": "string"
+                    },
+                    "scheduledDates": {
+                      "type": "array"
+                    }
+                  }
+                },
+                "resultCount": {
+                  "type": "integer",
+                  "example": 1
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Created Successfully"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     }
   }
